--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "basic-express-server",
+    "name": "helpful-api",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -11,17 +11,16 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/GuyFarley/basic-express-server.git"
+        "url": "git+https://github.com/rkgallaway/helpful-api.git"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/GuyFarley/basic-express-server/issues"
+        "url": "https://github.com/rkgallaway/helpful-api/issues"
     },
-    "homepage": "https://github.com/GuyFarley/basic-express-server#readme",
+    "homepage": "https://github.com/rkgallaway/helpful-api#readme",
     "dependencies": {
-        "dotenv": "^16.0.1",
         "eslint": "^8.17.0",
         "express": "^4.18.1",
         "jest": "^28.1.1",
